<resources>
    <string name="app_name">MangoApp</string>
    <string name="registration_title">Регистрация</string>
    <string name="name_hint">Имя</string>
    <string name="phone_number_hint">Телефон</string>
    <string name="register_button_label">Зарегистрироваться</string>
    <string name="have_account_button_label">У меня есть аккаунт</string>
    <string name="sign_in_title">Авторизация</string>
    <string name="sign_in_button_label">Войти</string>
    <string name="verification_code_title">Введите код подтверждения</string>
    <string name="verification_code_hint">Код</string>
    <string name="verification_button_label">Подтвердить</string>
    <string name="something_went_wrong">Что-то пошло не так!\nПовторите попытку позже</string>
    <string name="wrong_code">Неверный код!</string>
    <string name="username_hint">Никнейм</string>
    <string name="error_username_label">Можно использовать только символы от A - Z, и от a - z, цифры и символы - _</string>
    <string name="image_of_user_desc">Image of user</string>
    <string name="edit_label">Редактировать</string>
</resources>