<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/TitleText"
        android:layout_marginTop="32dp"
        android:text="@string/registration_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/registrationNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/name_hint"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/registrationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/registrationUsernameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/username_hint"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/registrationNameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/errorUsernameFiled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:text="@string/error_username_label"
        android:textAppearance="@style/TextError"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/registrationUsernameField"
        app:layout_constraintStart_toStartOf="@id/registrationUsernameField"
        app:layout_constraintEnd_toEndOf="@id/registrationUsernameField" />

    <Spinner
        android:id="@+id/countryCodes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/registrationPhoneField"
        app:layout_constraintEnd_toStartOf="@id/registrationPhoneField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/registrationPhoneField" />

    <EditText
        android:id="@+id/registrationPhoneField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/phone_number_hint"
        android:enabled="false"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/errorUsernameFiled"
        app:layout_constraintStart_toEndOf="@id/countryCodes"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="name"
        android:inputType="phone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/BaseButton"
        android:theme="@style/BaseButton"
        android:text="@string/register_button_label"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/registrationPhoneField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>